Docs: Amends mentions of PPC2002 build to reference PPC2000.
Documentation explains: PPC2002 devices now use PPC2000 build.

--- a/README
+++ b/README
@@ -52,7 +52,7 @@ Supported targets:
 
  PC: desktop Windows
 
- PPC2000, PPC2002, PPC2003: Pocket PC
+ PPC2000, PPC2003: Pocket PC (for PPC2002 devices, use PPC2000 target)
 
  WM5: Windows Mobile 5.0 and later
 
