--- a/doc/manual/XCSoar-manual.tex
+++ b/doc/manual/XCSoar-manual.tex
@@ -198,8 +198,7 @@ Several versions are available for different operating systems:
 Download the relevant package for your Pocket PC operating system
 version and save it to disk:
 \begin{description}
-\item[PPC] For Pocket PC version 3.0 and older, MIPS or ARM CPU.
-\item[PPC2002] For Pocket PC 2002, ARM CPU.
+\item[PPC2000] For Pocket PC 2002 and older, MIPS or ARM CPU.
 \item[PPC2003] For Pocket PC 2003, Pocket PC 2003 Second Edition, 
   and Windows Mobile 5.0 and Windows Mobile 6.0.
 \item[ALL] This package contains the executable programs for all
