--- a/po/sk.po
+++ b/po/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-16 23:05+0200\n"
-"PO-Revision-Date: 2010-08-17 18:25+0000\n"
+"PO-Revision-Date: 2010-08-25 14:04+0000\n"
 "Last-Translator: Peter Brtko <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-23 05:24+0000\n"
+"X-Launchpad-Export-Date: 2010-08-31 06:36+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: sk\n"
 
@@ -215,6 +215,10 @@ msgid ""
 "up/down arrow keys and the right/left arrow keys also cause the glider to "
 "turn."
 msgstr ""
+"[Výška GPS]\r\n"
+"Udáva výšku nad hladinou mora, stanovenú podľa GPS.\r\n"
+"Iba pre dotykový displej / PC: pri simulácii je táto hodnota meniteľná "
+"tlačítkom hore/dole. Tlačítko vľavo/vpravo zatáča vetroň."
 
 #: src/InfoBoxes/Content/Factory.cpp:224
 msgid ""
@@ -223,6 +227,9 @@ msgid ""
 "terrain file.  The value is coloured red when the glider is below the "
 "terrain safety clearance height."
 msgstr ""
+"[Výška AGL]\r\n"
+"Udáva navigačnú výšku mínus výšku terénu podľa súboru s terénom. Hodnota je "
+"červená ak je vetroň pod bezpečnou výškou nad terénom."
 
 #: src/InfoBoxes/Content/Factory.cpp:226
 msgid ""
@@ -230,6 +237,9 @@ msgid ""
 "A 30 second rolling average climb rate based of the reported GPS altitude, "
 "or vario if available."
 msgstr ""
+"[Stupák za posledných 30 s.]\r\n"
+"Aktuálny priemer rýchlosti stúpania podľa údajov GPS alebo vária ak je "
+"dostupné."
 
 #: src/InfoBoxes/Content/Factory.cpp:228
 msgid ""
@@ -237,6 +247,8 @@ msgid ""
 "True bearing of the next waypoint.  For AAT tasks, this is the true bearing "
 "to the target within the AAT sector."
 msgstr ""
+"Skutočný kurz k ďalšiemu otočnému bodu. Pre úlohy typu AAT je toto skutočný "
+"kurz na cieľ v AAT sektore."
 
 #: src/InfoBoxes/Content/Factory.cpp:230
 msgid ""
@@ -246,6 +258,11 @@ msgid ""
 "climbing cruise. If the vertical speed is close to zero, the displayed value "
 "is '---'."
 msgstr ""
+"[Okamžitá kĺzavosť]\r\n"
+"Okamžitá kĺzavosť, daná podielom rýchlosti voči zemi ku vertikálnej "
+"rýchlosti (rýchlosti GPS) za posledných 20 sekúnd. Negatívne hodnoty "
+"znamenajú stúpanie na preskoku. Ak je vertikálna rýchlosť blízko nule "
+"zobrazí sa hodnota '---'."
 
 #: src/InfoBoxes/Content/Factory.cpp:232
 msgid ""
@@ -255,6 +272,11 @@ msgid ""
 "(height gain since leaving the last thermal).  If the vertical speed is "
 "close to zero, the displayed value is '---'."
 msgstr ""
+"[Kĺzavosť na preskoku]\r\n"
+"Podiel vzdialenosti od vrcholu posledného stupáku k strate výšky od "
+"posledného vrcholu. Negatívne hodnoty znamenajú stúpanie na preskoku "
+"(získanie výšky od opustenia posledného stupáku). Ak je vertikálna rýchlosť "
+"blízka nule, zobrazí sa hodnota '---'."
 
 #: src/InfoBoxes/Content/Factory.cpp:234
 msgid ""
@@ -263,6 +285,10 @@ msgid ""
 "mode, pressing the up and down arrows adjusts the speed, and left and right "
 "turn the glider."
 msgstr ""
+"[Rýchlosť voči zemi]\r\n"
+"Rýchlosť voči zemi, meraná podľa GPS. Ak je toto info-okno aktivované v móde "
+"simulácie, stlačenie tlačítka hore/dole upravuje rýchlosť vetroňa, stlačenie "
+"ľavého/pravého tlačítka vetroň zatáča."
 
 #: src/InfoBoxes/Content/Factory.cpp:236
 msgid ""
@@ -319,6 +345,10 @@ msgid ""
 "the task.  (Touchscreen/PC only) Pressing the enter cursor key brings up the "
 "waypoint details."
 msgstr ""
+"[Ďalší otočný bod]\r\n"
+"Názov práve aktívneho otočného bodu. Pri aktivovaní tohto info-okna klávesy "
+"hore/dole menia otočný bod za ďalší/predošlý v úlohe. (Iba dotykový "
+"displej/PC) Stlačenie klávesy enter zobrazí detaily otočného bodu."
 
 #: src/InfoBoxes/Content/Factory.cpp:252
 msgid ""
@@ -344,6 +374,8 @@ msgid ""
 "[Final Distance]\r\n"
 "Distance to finish around remaining turn points."
 msgstr ""
+"[Vzdialenosť do cieľa]\r\n"
+"Vzdialenosť do cieľa cez zvyšné otočné body."
 
 #: src/InfoBoxes/Content/Factory.cpp:260
 msgid ""
@@ -391,6 +423,9 @@ msgid ""
 "Instantaneous vertical speed, as reported by the GPS, or the intelligent "
 "vario total energy vario value if connected to one."
 msgstr ""
+"[Vário]\r\n"
+"Okamžitá vertikálna rýchlosť. Podľa GPS, alebo podľa inteligentného total "
+"vária ak je pripojené."
 
 #: src/InfoBoxes/Content/Factory.cpp:272
 msgid ""
@@ -475,6 +510,8 @@ msgid ""
 "[Time of flight]\r\n"
 "Time elapsed since takeoff was detected."
 msgstr ""
+"[Trvanie letu]\r\n"
+"Čas uplynutý od rozoznaného vzletu."
 
 #: src/InfoBoxes/Content/Factory.cpp:296
 msgid ""
@@ -541,6 +578,11 @@ msgid ""
 "vario are connected, otherwise calculations are based on GPS measurements "
 "and wind estimates."
 msgstr ""
+"[Netto vário]\r\n"
+"Okamžitá vertikálna rýchlosť vzdušnej masy. Rovné hodnote vária mínus "
+"odhadovanému opadaniu vetroňa. Presné hodnoty je možné získať len pri "
+"pripojenom tachometri, akcelerometri a váriu. Ináč je hodnota podložená len "
+"údajmi z GPS a odhadom vetra."
 
 #: src/InfoBoxes/Content/Factory.cpp:312
 msgid ""
@@ -619,6 +661,8 @@ msgid ""
 "[Airspeed TAS]\r\n"
 "True Airspeed reported by a supported external intelligent vario."
 msgstr ""
+"[Rýchlosť TAS]\r\n"
+"Skutočná rýchlosť z výstupu kompatibilného inteligentného vária."
 
 #: src/InfoBoxes/Content/Factory.cpp:332
 msgid ""
@@ -685,6 +729,9 @@ msgid ""
 "Supply battery voltage for Altair systems, for PDA systems, this gives the "
 "percent battery capacity available."
 msgstr ""
+"[Percentá kapacity batérie]\r\n"
+"Udáva stav akumulátora systému PDA v percentách. Pre systém Altair udáva "
+"napätie zdrojovej batérie."
 
 #: src/InfoBoxes/Content/Factory.cpp:352
 msgid ""
@@ -759,7 +806,7 @@ msgstr "Kalibrovanie VYPNUTÉ"
 #. 0
 #: src/InfoBoxes/InfoBoxManager.cpp:115
 msgid "Height GPS"
-msgstr "GPS výška"
+msgstr "Výška GPS"
 
 #. 1
 #: src/InfoBoxes/InfoBoxManager.cpp:117
@@ -2813,7 +2860,7 @@ msgstr "Ukazateľe rýchlosti"
 #: Data/Dialogs/dlgConfiguration.xml:225
 #: Data/Dialogs/dlgConfiguration_L.xml:227
 msgid "Terrain height"
-msgstr "Priestor nad terénom"
+msgstr "Výška nad terénom"
 
 #: Data/Dialogs/dlgAirspaceWarning.xml:10
 msgid "ACK Day"
@@ -3066,7 +3113,7 @@ msgstr "Kontrast terénu"
 #: Data/Dialogs/dlgWayPointDetails.xml:20
 #: Data/Dialogs/dlgWayPointDetails_L.xml:20
 msgid "Alt diff Mc safety"
-msgstr "Výškový rozdiel pre bezpečné Mc"
+msgstr "Výškový rozdiel s bezpečným MC"
 
 #: Data/Dialogs/dlgConfiguration.xml:747
 #: Data/Dialogs/dlgConfiguration_L.xml:761
@@ -3693,7 +3740,7 @@ msgstr "Letisko"
 
 #: Data/Dialogs/dlgConfiguration.xml:47 Data/Dialogs/dlgConfiguration_L.xml:48
 msgid "Airfields file*"
-msgstr "Súbor s detailami letísk*"
+msgstr "Súbor s popisom letísk*"
 
 #: Data/Dialogs/dlgVoice.xml:18
 msgid "Task Altitude Difference"
@@ -3763,7 +3810,7 @@ msgstr "A+"
 #: Data/Dialogs/dlgConfiguration.xml:213
 #: Data/Dialogs/dlgConfiguration_L.xml:215
 msgid "STF risk factor*"
-msgstr ""
+msgstr "Koeficient rizika STF*"
 
 #: Data/Dialogs/dlgVario.xml:79 Data/Dialogs/dlgVario_L.xml:80
 msgid "Cruise lift trigger"
@@ -3925,7 +3972,7 @@ msgstr "Použiť čierne orámovanie*"
 
 #: Data/Dialogs/dlgWaypointEdit_L.xml:10
 msgid "Lon"
-msgstr ""
+msgstr "Dlz"
 
 #: Data/Dialogs/dlgAirspaceSelect.xml:14
 #: Data/Dialogs/dlgAirspaceSelect_L.xml:20
@@ -3968,7 +4015,7 @@ msgstr ""
 #: Data/Dialogs/dlgConfiguration.xml:393
 #: Data/Dialogs/dlgConfiguration_L.xml:393
 msgid "Debounce time*"
-msgstr ""
+msgstr "Opakovanie stlačenia klávesy po*"
 
 #: Data/Dialogs/dlgAirspaceDetails.xml:14
 msgid "Base"
