--- a/po/sk.po
+++ b/po/sk.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-08-31 09:12+0200\n"
+"PO-Revision-Date: 2010-08-31 13:56+0000\n"
 "Last-Translator: Peter Brtko <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
-"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-31 06:36+0000\n"
+"X-Launchpad-Export-Date: 2010-08-31 14:36+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
+"Language: sk\n"
 
 #: src/Airspace/AirspaceGlue.cpp:55
 msgid "Loading Airspace File..."
@@ -199,30 +199,34 @@ msgstr "Výška GPS"
 
 #: src/InfoBoxes/Content/Factory.cpp:71
 msgid "H GPS"
-msgstr ""
+msgstr "V GPS"
 
 #: src/InfoBoxes/Content/Factory.cpp:72
 msgid ""
 "This is the height above mean sea level reported by the GPS. Touchscreen/PC "
 "only: in simulation mode, this value is adjustable with the up/down arrow "
 "keys and the right/left arrow keys also cause the glider to turn."
-msgstr "Udáva výšku nad hladinou mora, stanovenú podľa GPS. Iba pre dotykový displej / PC: pri simulácii je táto hodnota meniteľná tlačítkom hore/dole. Tlačítko vľavo/vpravo zatáča vetroň."
+msgstr ""
+"Udáva výšku nad hladinou mora, stanovenú podľa GPS. Iba pre dotykový displej "
+"/ PC: pri simulácii je táto hodnota meniteľná tlačítkom hore/dole. Tlačítko "
+"vľavo/vpravo zatáča vetroň."
 
 #: src/InfoBoxes/Content/Factory.cpp:78
 msgid "Height AGL"
 msgstr "Výška AGL"
 
 #: src/InfoBoxes/Content/Factory.cpp:79
-#, fuzzy
 msgid "H AGL"
-msgstr "Výška AGL"
+msgstr "V AGL"
 
 #: src/InfoBoxes/Content/Factory.cpp:80
 msgid ""
 "This is the navigation altitude minus the terrain height obtained from the "
 "terrain file. The value is coloured red when the glider is below the terrain "
 "safety clearance height."
-msgstr "Udáva navigačnú výšku mínus výšku terénu podľa súboru s terénom. Hodnota je červená ak je vetroň pod bezpečnou výškou nad terénom."
+msgstr ""
+"Udáva navigačnú výšku mínus výšku terénu podľa súboru s terénom. Hodnota je "
+"červená ak je vetroň pod bezpečnou výškou nad terénom."
 
 #: src/InfoBoxes/Content/Factory.cpp:86
 msgid "Thermal last 30 sec"
@@ -236,7 +240,9 @@ msgstr ""
 msgid ""
 "A 30 second rolling average climb rate based of the reported GPS altitude, "
 "or vario if available."
-msgstr "Aktuálny priemer rýchlosti stúpania podľa údajov GPS alebo vária ak je dostupné."
+msgstr ""
+"Aktuálny priemer rýchlosti stúpania podľa údajov GPS alebo vária ak je "
+"dostupné."
 
 #: src/InfoBoxes/Content/Factory.cpp:94 src/InfoBoxes/Content/Factory.cpp:95
 #: Data/Dialogs/dlgStatus.xml:15 Data/Dialogs/dlgStatusAircraft.xml:10
@@ -246,13 +252,10 @@ msgid "Bearing"
 msgstr "Kurz"
 
 #: src/InfoBoxes/Content/Factory.cpp:96
-#, fuzzy
 msgid ""
 "True bearing of the next waypoint.  For AAT tasks, this is the true bearing "
 "to the target within the AAT sector."
 msgstr ""
-"Skutočný kurz k ďalšiemu otočnému bodu. Pre úlohy typu AAT je toto skutočný "
-"kurz na cieľ v AAT sektore."
 
 #: src/InfoBoxes/Content/Factory.cpp:102
 msgid "L/D instantaneous"
@@ -268,7 +271,11 @@ msgid ""
 "speed (GPS speed) over the last 20 seconds. Negative values indicate "
 "climbing cruise. If the vertical speed is close to zero, the displayed value "
 "is '---'."
-msgstr "Okamžitá kĺzavosť, daná podielom rýchlosti voči zemi ku vertikálnej rýchlosti (rýchlosti GPS) za posledných 20 sekúnd. Negatívne hodnoty znamenajú stúpanie na preskoku. Ak je vertikálna rýchlosť blízko nule zobrazí sa hodnota '---'."
+msgstr ""
+"Okamžitá kĺzavosť, daná podielom rýchlosti voči zemi ku vertikálnej "
+"rýchlosti (rýchlosti GPS) za posledných 20 sekúnd. Negatívne hodnoty "
+"znamenajú stúpanie na preskoku. Ak je vertikálna rýchlosť blízko nule "
+"zobrazí sa hodnota '---'."
 
 #: src/InfoBoxes/Content/Factory.cpp:110
 msgid "L/D cruise"
@@ -284,7 +291,11 @@ msgid ""
 "since the top of the last thermal. Negative values indicate climbing cruise "
 "(height gain since leaving the last thermal). If the vertical speed is close "
 "to zero, the displayed value is '---'."
-msgstr "Podiel vzdialenosti od vrcholu posledného stupáku k strate výšky od posledného vrcholu. Negatívne hodnoty znamenajú stúpanie na preskoku (získanie výšky od opustenia posledného stupáku). Ak je vertikálna rýchlosť blízka nule, zobrazí sa hodnota '---'."
+msgstr ""
+"Podiel vzdialenosti od vrcholu posledného stupáku k strate výšky od "
+"posledného vrcholu. Negatívne hodnoty znamenajú stúpanie na preskoku "
+"(získanie výšky od opustenia posledného stupáku). Ak je vertikálna rýchlosť "
+"blízka nule, zobrazí sa hodnota '---'."
 
 #: src/InfoBoxes/Content/Factory.cpp:118
 msgid "Speed ground"
@@ -292,14 +303,17 @@ msgstr "Rýchlosť voči zemi"
 
 #: src/InfoBoxes/Content/Factory.cpp:119
 msgid "V Gnd"
-msgstr ""
+msgstr "R zem"
 
 #: src/InfoBoxes/Content/Factory.cpp:120
 msgid ""
 "Ground speed measured by the GPS. If this infobox is active in simulation "
 "mode, pressing the up and down arrows adjusts the speed, and left and right "
 "turn the glider."
-msgstr "Rýchlosť voči zemi, meraná podľa GPS. Ak je toto info-okno aktivované v móde simulácie, stlačenie tlačítka hore/dole upravuje rýchlosť vetroňa, stlačenie ľavého/pravého tlačítka vetroň zatáča."
+msgstr ""
+"Rýchlosť voči zemi, meraná podľa GPS. Ak je toto info-okno aktivované v móde "
+"simulácie, stlačenie tlačítka hore/dole upravuje rýchlosť vetroňa, stlačenie "
+"ľavého/pravého tlačítka vetroň zatáča."
 
 #: src/InfoBoxes/Content/Factory.cpp:126
 msgid "Last Thermal Average"
@@ -314,6 +328,8 @@ msgid ""
 "Total altitude gain/loss in the last thermal divided by the time spent "
 "circling."
 msgstr ""
+"Podiel celkového zisku/straty výšky v poslednom stupáku k času strávenému "
+"krúžením."
 
 #: src/InfoBoxes/Content/Factory.cpp:134
 msgid "Last Thermal Gain"
@@ -325,7 +341,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:136
 msgid "Total altitude gain/loss in the last thermal."
-msgstr ""
+msgstr "Celkový zisk/strata výšky v poslednom stupáku."
 
 #: src/InfoBoxes/Content/Factory.cpp:142
 msgid "Last Thermal Time"
@@ -337,7 +353,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:144
 msgid "Time spent circling in the last thermal."
-msgstr ""
+msgstr "Čas strávený krúžením v poslednom stupáku."
 
 #: src/InfoBoxes/Content/Factory.cpp:150
 msgid "MacCready Setting"
@@ -363,13 +379,10 @@ msgid "WP Dist"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:160
-#, fuzzy
 msgid ""
 "The distance to the currently selected waypoint. For AAT tasks, this is the "
 "distance to the target within the AAT sector."
 msgstr ""
-"Skutočný kurz k ďalšiemu otočnému bodu. Pre úlohy typu AAT je toto skutočný "
-"kurz na cieľ v AAT sektore."
 
 #: src/InfoBoxes/Content/Factory.cpp:166
 msgid "Next Altitude Difference"
@@ -395,7 +408,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:176
 msgid "Altitude required to reach the next turn point."
-msgstr ""
+msgstr "Výška potrebná k dosiahnutiu daľšieho otočného bodu."
 
 #: src/InfoBoxes/Content/Factory.cpp:182
 msgid "Next Waypoint"
@@ -403,16 +416,15 @@ msgstr "Ďalší otočný bod"
 
 #: src/InfoBoxes/Content/Factory.cpp:183
 msgid "Next"
-msgstr ""
+msgstr "Ďalší"
 
 #: src/InfoBoxes/Content/Factory.cpp:184
-#, fuzzy
 msgid ""
 "The name of the currently selected turn point. When this infobox is active, "
 "using the up/down cursor keys selects the next/previous waypoint in the "
 "task. (Touchscreen/PC only) Pressing the enter cursor key brings up the "
 "waypoint details."
-msgstr "Názov práve aktívneho otočného bodu. Pri aktivovaní tohto info-okna klávesy hore/dole menia otočný bod za ďalší/predošlý v úlohe. (Iba dotykový displej/PC) Stlačenie klávesy enter zobrazí detaily otočného bodu."
+msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:190
 msgid "Final Altitude Difference"
@@ -462,9 +474,8 @@ msgid "Fin Dis"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:216
-#, fuzzy
 msgid "Distance to finish around remaining turn points."
-msgstr "Vzdialenosť do cieľa cez zvyšné otočné body."
+msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:222
 msgid "Final LD"
@@ -534,7 +545,10 @@ msgid ""
 "Magnetic track reported by the GPS. (Touchscreen/PC only) If this infobox is "
 "active in simulation mode, pressing the up and down  arrows adjusts the "
 "track."
-msgstr "Rýchlosť voči zemi, meraná podľa GPS. Ak je toto info-okno aktivované v móde simulácie, stlačenie tlačítka hore/dole upravuje rýchlosť vetroňa, stlačenie ľavého/pravého tlačítka vetroň zatáča."
+msgstr ""
+"Rýchlosť voči zemi, meraná podľa GPS. Ak je toto info-okno aktivované v móde "
+"simulácie, stlačenie tlačítka hore/dole upravuje rýchlosť vetroňa, stlačenie "
+"ľavého/pravého tlačítka vetroň zatáča."
 
 #: src/InfoBoxes/Content/Factory.cpp:262 src/InfoBoxes/Content/Factory.cpp:263
 #: Data/Dialogs/dlgFlarmTrafficDetails.xml:14
@@ -547,7 +561,9 @@ msgstr "Vário"
 msgid ""
 "Instantaneous vertical speed, as reported by the GPS, or the intelligent "
 "vario total energy vario value if connected to one."
-msgstr "Okamžitá vertikálna rýchlosť. Podľa GPS, alebo podľa inteligentného total vária ak je pripojené."
+msgstr ""
+"Okamžitá vertikálna rýchlosť. Podľa GPS, alebo podľa inteligentného total "
+"vária ak je pripojené."
 
 #: src/InfoBoxes/Content/Factory.cpp:270
 msgid "Wind Speed"
@@ -560,10 +576,10 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:272
 msgid ""
 "Wind speed estimated by XCSoar. (Touchscreen/PC only) Manual adjustment is "
-"possible by pressing the up/down cursor keys to adjust magnitude and left/"
-"right cursor keys to adjust bearing when the infobox is active. Pressing the "
-"enter cursor key saves the wind value as the initial value when XCSoar next "
-"starts."
+"possible by pressing the up/down cursor keys to adjust magnitude and "
+"left/right cursor keys to adjust bearing when the infobox is active. "
+"Pressing the enter cursor key saves the wind value as the initial value when "
+"XCSoar next starts."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:278
@@ -648,10 +664,11 @@ msgstr "Rýchlosť IAS"
 
 #: src/InfoBoxes/Content/Factory.cpp:327
 msgid "V IAS"
-msgstr ""
+msgstr "R IAS"
 
 #: src/InfoBoxes/Content/Factory.cpp:328
-msgid "Indicated Airspeed reported by a supported external intelligent vario."
+msgid ""
+"Indicated Airspeed reported by a supported external intelligent vario."
 msgstr "Skutočná rýchlosť z výstupu kompatibilného inteligentného vária."
 
 #: src/InfoBoxes/Content/Factory.cpp:334
@@ -660,13 +677,15 @@ msgstr "Výška tlaková"
 
 #: src/InfoBoxes/Content/Factory.cpp:335
 msgid "H Baro"
-msgstr ""
+msgstr "V baro"
 
 #: src/InfoBoxes/Content/Factory.cpp:336
 msgid ""
 "This is the barometric altitude obtained from a GPS equipped with pressure "
 "sensor, or a supported external intelligent vario."
 msgstr ""
+"Toto je barometrická výška udávaná GPS zariadením s tlakovým senzorom, alebo "
+"podporovaným inteligentným váriom."
 
 #: src/InfoBoxes/Content/Factory.cpp:342
 msgid "Speed MacCready"
@@ -674,7 +693,7 @@ msgstr "Rýchlosť MacCready"
 
 #: src/InfoBoxes/Content/Factory.cpp:343
 msgid "V Mc"
-msgstr ""
+msgstr "R Mc"
 
 #: src/InfoBoxes/Content/Factory.cpp:344
 msgid ""
@@ -682,6 +701,9 @@ msgid ""
 "cruise flight mode, this speed-to-fly is calculated for maintaining "
 "altitude. In final glide mode, this speed-to-fly is calculated for descent."
 msgstr ""
+"MacCready rýchlosť letu pre optimálne kĺzanie k ďalšiemu otočnému bodu. V "
+"preskokovom móde je výpočet orientovaný na udržanie výšky. Pri doklze "
+"prebieha výpočet pre zostup."
 
 #: src/InfoBoxes/Content/Factory.cpp:350
 msgid "Percentage climb"
@@ -716,7 +738,7 @@ msgstr "G zaťaženie"
 
 #: src/InfoBoxes/Content/Factory.cpp:367
 msgid "G"
-msgstr ""
+msgstr "G"
 
 #: src/InfoBoxes/Content/Factory.cpp:368
 msgid ""
@@ -737,8 +759,8 @@ msgid ""
 "The required glide ratio to reach the next waypoint, given by the distance "
 "to next waypoint divided by the height required to arrive at the safety "
 "arrival altitude. Negative values indicate a climb is necessary to reach the "
-"waypoint. If the height required is close to zero, the displayed value is "
-"'---'.   Note that this calculation may be optimistic because it reduces the "
+"waypoint. If the height required is close to zero, the displayed value is '--"
+"-'.   Note that this calculation may be optimistic because it reduces the "
 "height required to reach the waypoint by the excess energy height of the "
 "glider if its true airspeed is greater than the MacCready and best LD speeds."
 msgstr ""
@@ -824,7 +846,11 @@ msgid ""
 "glider's estimated sink rate. Best used if airspeed, accelerometers and "
 "vario are connected, otherwise calculations are based on GPS measurements "
 "and wind estimates."
-msgstr "Okamžitá vertikálna rýchlosť vzdušnej masy. Rovné hodnote vária mínus odhadovanému opadaniu vetroňa. Presné hodnoty je možné získať len pri pripojenom tachometri, akcelerometri a váriu. Ináč je hodnota podložená len údajmi z GPS a odhadom vetra."
+msgstr ""
+"Okamžitá vertikálna rýchlosť vzdušnej masy. Rovné hodnote vária mínus "
+"odhadovanému opadaniu vetroňa. Presné hodnoty je možné získať len pri "
+"pripojenom tachometri, akcelerometri a váriu. Ináč je hodnota podložená len "
+"údajmi z GPS a odhadom vetra."
 
 #: src/InfoBoxes/Content/Factory.cpp:430
 msgid "Task Arrival Time"
@@ -927,7 +953,8 @@ msgid "AA Dtgt"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:480
-msgid "Assigned Area Task distance around target points for remainder of task."
+msgid ""
+"Assigned Area Task distance around target points for remainder of task."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:486
@@ -954,7 +981,11 @@ msgid ""
 "total energy vertical speed, when connected to an intelligent variometer. "
 "Negative values indicate climbing cruise. If the total energy vario speed is "
 "close to zero, the displayed value is '---'."
-msgstr "Okamžitá kĺzavosť, daná podielom rýchlosti voči zemi ku vertikálnej rýchlosti (rýchlosti GPS) za posledných 20 sekúnd. Negatívne hodnoty znamenajú stúpanie na preskoku. Ak je vertikálna rýchlosť blízko nule zobrazí sa hodnota '---'."
+msgstr ""
+"Okamžitá kĺzavosť, daná podielom rýchlosti voči zemi ku vertikálnej "
+"rýchlosti (rýchlosti GPS) za posledných 20 sekúnd. Negatívne hodnoty "
+"znamenajú stúpanie na preskoku. Ak je vertikálna rýchlosť blízko nule "
+"zobrazí sa hodnota '---'."
 
 #: src/InfoBoxes/Content/Factory.cpp:502
 msgid "Airspeed TAS"
@@ -991,7 +1022,8 @@ msgid "Tm Brng"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:520
-msgid "The bearing to the team aircraft location at the last team code report."
+msgid ""
+"The bearing to the team aircraft location at the last team code report."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:526
@@ -1017,7 +1049,8 @@ msgid "Team Dis"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:536
-msgid "The range to the team aircraft location at the last reported team code."
+msgid ""
+"The range to the team aircraft location at the last reported team code."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:542
@@ -1110,7 +1143,9 @@ msgstr ""
 msgid ""
 "Supply battery voltage for Altair systems, for PDA systems, this gives the "
 "percent battery capacity available."
-msgstr "Udáva stav akumulátora systému PDA v percentách. Pre systém Altair udáva napätie zdrojovej batérie."
+msgstr ""
+"Udáva stav akumulátora systému PDA v percentách. Pre systém Altair udáva "
+"napätie zdrojovej batérie."
 
 #: src/InfoBoxes/Content/Factory.cpp:603
 msgid "Final GR"
@@ -1681,13 +1716,13 @@ msgstr "Skenovanie predpovede počasia"
 msgid "Starting devices"
 msgstr "Štartovanie zariadení"
 
-#.
+#. 
 #. -- Reset polar in case devices need the data
 #. LogStartUp(_T("GlidePolar::UpdatePolar"));
 #. GlidePolar::UpdatePolar(true, SettingsComputer());
-#.
+#. 
 #. This should be done inside devStartup if it is really required
-#.
+#. 
 #: src/Components.cpp:365
 msgid "Initialising display"
 msgstr "Spúštanie displeja"
@@ -4369,6 +4404,16 @@ msgstr "Odhadovaná doba na úlohu"
 msgid "Avg/Alt"
 msgstr ""
 
+#~ msgid "Vario Gauge and FLARM"
+#~ msgstr "Ukazovateľ vária a FLARM"
+
+#~ msgid "Error"
+#~ msgstr "Chyba"
+
+#~ msgid "Yes All"
+#~ msgstr "Áno pre všetko"
+
+#, c-format
 #~ msgid ""
 #~ "Waypoint \"%s\" \r\n"
 #~ "out of Terrain bounds\r\n"
@@ -4379,12 +4424,3 @@ msgstr ""
 #~ "je mimo hraníc terénu\r\n"
 #~ "\r\n"
 #~ "Načítať ho napriek tomu?"
-
-#~ msgid "Yes All"
-#~ msgstr "Áno pre všetko"
-
-#~ msgid "Vario Gauge and FLARM"
-#~ msgstr "Ukazovateľ vária a FLARM"
-
-#~ msgid "Error"
-#~ msgstr "Chyba"
