--- a/po/sk.po
+++ b/po/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-08-31 13:56+0000\n"
+"PO-Revision-Date: 2010-09-02 08:41+0000\n"
 "Last-Translator: Peter Brtko <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-31 14:36+0000\n"
+"X-Launchpad-Export-Date: 2010-09-02 10:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: sk\n"
 
@@ -263,7 +263,7 @@ msgstr "Okamžitá kĺzavosť"
 
 #: src/InfoBoxes/Content/Factory.cpp:103
 msgid "L/D Inst"
-msgstr ""
+msgstr "Kĺz Ok"
 
 #: src/InfoBoxes/Content/Factory.cpp:104
 msgid ""
@@ -283,7 +283,7 @@ msgstr "Kĺzavosť na preskoku"
 
 #: src/InfoBoxes/Content/Factory.cpp:111
 msgid "L/D Cru"
-msgstr ""
+msgstr "Kĺz Presk"
 
 #: src/InfoBoxes/Content/Factory.cpp:112
 msgid ""
@@ -369,6 +369,10 @@ msgid ""
 "manual or auto. (Touchscreen/PC only) Also used to adjust the MacCready "
 "Setting if the infobox is active, by using the up/down cursor keys."
 msgstr ""
+"Aktuálne nastavenie hodnoty MacCready. Toto info-okno zároveň ukazuje či je "
+"MacCready mód manuálny alebo automatický.\r\n"
+"(Iba dotykový displej/PC) Ak je toto okno aktívne dá sa MacCready hodnota "
+"nastaviť klávesami hore/dole."
 
 #: src/InfoBoxes/Content/Factory.cpp:158
 msgid "Next Distance"
@@ -397,6 +401,7 @@ msgid ""
 "Arrival altitude at the next waypoint relative to the safety arrival "
 "altitude."
 msgstr ""
+"Príletová výška na ďalší otočný bod relatívna k bezpečnej príletovej výške."
 
 #: src/InfoBoxes/Content/Factory.cpp:174
 msgid "Next Altitude Required"
@@ -475,7 +480,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:216
 msgid "Distance to finish around remaining turn points."
-msgstr ""
+msgstr "Vzdialenosť do cieľa cez ostávajúce otočné body."
 
 #: src/InfoBoxes/Content/Factory.cpp:222
 msgid "Final LD"
@@ -571,7 +576,7 @@ msgstr "Rýchlosť vetra"
 
 #: src/InfoBoxes/Content/Factory.cpp:271
 msgid "Wind V"
-msgstr ""
+msgstr "R vetra"
 
 #: src/InfoBoxes/Content/Factory.cpp:272
 msgid ""
@@ -581,6 +586,10 @@ msgid ""
 "Pressing the enter cursor key saves the wind value as the initial value when "
 "XCSoar next starts."
 msgstr ""
+"Rýchlosť vetra odhadovaná XCSoarom. (Iba dotykový displej/PC) Manuálne "
+"nastavenie je možné stlačením klávesy hore/dole pre silu a vľavo/vpravo pre "
+"smer, ak je okno aktivované. Stlačenie klávesy enter uloží parametre vetra "
+"ako počiatočné pre štart XCSoaru."
 
 #: src/InfoBoxes/Content/Factory.cpp:278
 msgid "Wind Bearing"
@@ -588,7 +597,7 @@ msgstr "Smer vetra"
 
 #: src/InfoBoxes/Content/Factory.cpp:279
 msgid "Wind B"
-msgstr ""
+msgstr "S vetra"
 
 #: src/InfoBoxes/Content/Factory.cpp:280
 msgid ""
@@ -596,6 +605,9 @@ msgid ""
 "possible by pressing the up/down cursor keys to adjust bearing when the "
 "infobox is active."
 msgstr ""
+"Smer vetra odhadovaný XCSoarom. (Iba dotykový displej/PC) Manuálne "
+"nastavenie smeru je možné stlačením klávesy vľavo/vpravo, ak je okno "
+"aktivované."
 
 #: src/InfoBoxes/Content/Factory.cpp:286 src/InfoBoxes/Content/Factory.cpp:287
 msgid "AA Time"
@@ -719,6 +731,8 @@ msgid ""
 "Percentage of time spent in climb mode. These statistics are reset upon "
 "starting the task."
 msgstr ""
+"Percento času stráveného v móde stúpania. Táto štatistika sa vynuluje po "
+"štarte úlohy."
 
 #: src/InfoBoxes/Content/Factory.cpp:358
 msgid "Time of flight"
@@ -745,6 +759,8 @@ msgid ""
 "Magnitude of G loading reported by a supported external intelligent vario. "
 "This value is negative for pitch-down manoeuvres."
 msgstr ""
+"Hodnota G násobku udávaná podporovaným externým inteligentným váriom. Táto "
+"hodnota je negatívna pre manévre so sklonom dole."
 
 #: src/InfoBoxes/Content/Factory.cpp:374
 msgid "Next LD"
@@ -775,7 +791,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:384
 msgid "GPS time expressed in local time zone."
-msgstr ""
+msgstr "GPS čas upravený pre miestnu časovú zónu."
 
 #: src/InfoBoxes/Content/Factory.cpp:390 src/InfoBoxes/Content/Factory.cpp:391
 msgid "Time UTC"
@@ -783,7 +799,7 @@ msgstr "UTC čas"
 
 #: src/InfoBoxes/Content/Factory.cpp:392
 msgid "GPS time expressed in UTC."
-msgstr ""
+msgstr "GPS čas neupravený (UTC)."
 
 #: src/InfoBoxes/Content/Factory.cpp:398
 msgid "Task Time To Go"
@@ -838,7 +854,7 @@ msgstr "Netto vário"
 
 #: src/InfoBoxes/Content/Factory.cpp:423
 msgid "Netto"
-msgstr ""
+msgstr "Netto"
 
 #: src/InfoBoxes/Content/Factory.cpp:424
 msgid ""
@@ -1073,11 +1089,11 @@ msgstr "Vzdialenosť domov"
 
 #: src/InfoBoxes/Content/Factory.cpp:551
 msgid "Home Dis"
-msgstr ""
+msgstr "Vzd Dom"
 
 #: src/InfoBoxes/Content/Factory.cpp:552
 msgid "Distance to home waypoint (if defined)."
-msgstr ""
+msgstr "Vzdialenosť do domáceho otočného bodu (ak je definovaný)."
 
 #: src/InfoBoxes/Content/Factory.cpp:558
 msgid "Speed Task Achieved"
