--- a/po/fr.po
+++ b/po/fr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-08-31 09:02+0200\n"
+"PO-Revision-Date: 2010-09-06 14:47+0000\n"
 "Last-Translator: Sylvain BURGER <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
-"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-06 06:44+0000\n"
+"X-Launchpad-Export-Date: 2010-09-07 08:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
+"Language: fr\n"
 
 #: src/Airspace/AirspaceGlue.cpp:55
 msgid "Loading Airspace File..."
@@ -143,7 +143,7 @@ msgstr "prochain point de virage"
 
 #: src/ExpandMacros.cpp:134 src/ExpandMacros.cpp:180
 msgid "Previous turnpoint"
-msgstr ""
+msgstr "Point de virage précédent"
 
 #: src/ExpandMacros.cpp:146
 msgid "Furthest landpoint"
@@ -163,11 +163,11 @@ msgstr ""
 
 #: src/ExpandMacros.cpp:169
 msgid "Finish turnpoint"
-msgstr ""
+msgstr "Point de virage Arrivée"
 
 #: src/ExpandMacros.cpp:179
 msgid "Start turnpoint"
-msgstr ""
+msgstr "Point de virage Départ"
 
 #: src/ExpandMacros.cpp:188
 msgid "Start point cycle"
@@ -551,10 +551,10 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:272
 msgid ""
 "Wind speed estimated by XCSoar. (Touchscreen/PC only) Manual adjustment is "
-"possible by pressing the up/down cursor keys to adjust magnitude and left/"
-"right cursor keys to adjust bearing when the infobox is active. Pressing the "
-"enter cursor key saves the wind value as the initial value when XCSoar next "
-"starts."
+"possible by pressing the up/down cursor keys to adjust magnitude and "
+"left/right cursor keys to adjust bearing when the infobox is active. "
+"Pressing the enter cursor key saves the wind value as the initial value when "
+"XCSoar next starts."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:278
@@ -642,7 +642,8 @@ msgid "V IAS"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:328
-msgid "Indicated Airspeed reported by a supported external intelligent vario."
+msgid ""
+"Indicated Airspeed reported by a supported external intelligent vario."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:334
@@ -728,8 +729,8 @@ msgid ""
 "The required glide ratio to reach the next waypoint, given by the distance "
 "to next waypoint divided by the height required to arrive at the safety "
 "arrival altitude. Negative values indicate a climb is necessary to reach the "
-"waypoint. If the height required is close to zero, the displayed value is "
-"'---'.   Note that this calculation may be optimistic because it reduces the "
+"waypoint. If the height required is close to zero, the displayed value is '--"
+"-'.   Note that this calculation may be optimistic because it reduces the "
 "height required to reach the waypoint by the excess energy height of the "
 "glider if its true airspeed is greater than the MacCready and best LD speeds."
 msgstr ""
@@ -918,7 +919,8 @@ msgid "AA Dtgt"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:480
-msgid "Assigned Area Task distance around target points for remainder of task."
+msgid ""
+"Assigned Area Task distance around target points for remainder of task."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:486
@@ -982,7 +984,8 @@ msgid "Tm Brng"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:520
-msgid "The bearing to the team aircraft location at the last team code report."
+msgid ""
+"The bearing to the team aircraft location at the last team code report."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:526
@@ -1008,7 +1011,8 @@ msgid "Team Dis"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:536
-msgid "The range to the team aircraft location at the last reported team code."
+msgid ""
+"The range to the team aircraft location at the last reported team code."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:542
@@ -1672,13 +1676,13 @@ msgstr ""
 msgid "Starting devices"
 msgstr ""
 
-#.
+#. 
 #. -- Reset polar in case devices need the data
 #. LogStartUp(_T("GlidePolar::UpdatePolar"));
 #. GlidePolar::UpdatePolar(true, SettingsComputer());
-#.
+#. 
 #. This should be done inside devStartup if it is really required
-#.
+#. 
 #: src/Components.cpp:365
 msgid "Initialising display"
 msgstr "Initialisation de l'affichage"
@@ -2639,9 +2643,8 @@ msgid "Comment"
 msgstr "Commentaire"
 
 #: src/Dialogs/dlgWayPointSelect.cpp:473
-#, fuzzy
 msgid "Choose a filter or click here"
-msgstr "Choisissez un filtre"
+msgstr ""
 
 #: src/Device/Driver/Volkslogger.cpp:142
 msgid "Comms with Volkslogger"
@@ -4361,6 +4364,13 @@ msgstr ""
 msgid "Avg/Alt"
 msgstr ""
 
+#~ msgid "Error"
+#~ msgstr "Erreur"
+
+#~ msgid "Yes All"
+#~ msgstr "oui tous"
+
+#, c-format
 #~ msgid ""
 #~ "Waypoint \"%s\" \r\n"
 #~ "out of Terrain bounds\r\n"
@@ -4371,9 +4381,3 @@ msgstr ""
 #~ "en dehors des limites de la carte\r\n"
 #~ "\r\n"
 #~ "Charger quand même ?"
-
-#~ msgid "Yes All"
-#~ msgstr "oui tous"
-
-#~ msgid "Error"
-#~ msgstr "Erreur"
