--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-09-07 15:49+0000\n"
+"PO-Revision-Date: 2010-09-07 18:22+0000\n"
 "Last-Translator: Luis Fernando Rigato Vasconcellos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-07 16:48+0000\n"
+"X-Launchpad-Export-Date: 2010-09-08 07:36+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: src/Airspace/AirspaceGlue.cpp:55
@@ -825,11 +825,11 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:390 src/InfoBoxes/Content/Factory.cpp:391
 msgid "Time UTC"
-msgstr ""
+msgstr "Hora UTC"
 
 #: src/InfoBoxes/Content/Factory.cpp:392
 msgid "GPS time expressed in UTC."
-msgstr ""
+msgstr "Hora GPS expressa em UTC"
 
 #: src/InfoBoxes/Content/Factory.cpp:398
 msgid "Task Time To Go"
@@ -837,13 +837,15 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:399
 msgid "Fin ETE"
-msgstr ""
+msgstr "Fin ETE"
 
 #: src/InfoBoxes/Content/Factory.cpp:400
 msgid ""
 "Estimated time required to complete task, assuming performance of ideal "
 "MacCready cruise/climb cycle."
 msgstr ""
+"Tempo estimado requerido para completar a prova, assumindo uma performance "
+"MacCready ideal."
 
 #: src/InfoBoxes/Content/Factory.cpp:406
 msgid "Next Time To Go"
@@ -851,13 +853,15 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:407
 msgid "WP ETE"
-msgstr ""
+msgstr "PV ETE"
 
 #: src/InfoBoxes/Content/Factory.cpp:408
 msgid ""
 "Estimated time required to reach next waypoint, assuming performance of "
 "ideal MacCready cruise/climb cycle."
 msgstr ""
+"Tempo estimado requerido para alcançar o próximo ponto de virada, assumindo "
+"uma performance MacCready ideal."
 
 #: src/InfoBoxes/Content/Factory.cpp:414
 msgid "Speed Dolphin"
@@ -865,7 +869,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:415
 msgid "V Opt"
-msgstr ""
+msgstr "V Ótima"
 
 #: src/InfoBoxes/Content/Factory.cpp:416
 msgid ""
@@ -880,11 +884,11 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:422
 msgid "Netto Vario"
-msgstr ""
+msgstr "Vario Netto"
 
 #: src/InfoBoxes/Content/Factory.cpp:423
 msgid "Netto"
-msgstr ""
+msgstr "Netto"
 
 #: src/InfoBoxes/Content/Factory.cpp:424
 msgid ""
@@ -893,10 +897,14 @@ msgid ""
 "vario are connected, otherwise calculations are based on GPS measurements "
 "and wind estimates."
 msgstr ""
+"Velocidade vertical da massa de ar, igual a leitura do vario menos o "
+"afundamento estimado do planador. Melhor utilizado se velocidade do ar, "
+"acelerômetros e varios estiverem conectados, do contrário os cálculos serão "
+"baseados nas informações do GPS e nas estimativas do vento."
 
 #: src/InfoBoxes/Content/Factory.cpp:430
 msgid "Task Arrival Time"
-msgstr ""
+msgstr "Hora de chegada da prova"
 
 #: src/InfoBoxes/Content/Factory.cpp:431
 msgid "Fin ETA"
@@ -944,21 +952,23 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:454
 msgid "Outside Air Temperature"
-msgstr ""
+msgstr "Temperatura do ar externo"
 
 #: src/InfoBoxes/Content/Factory.cpp:455
 msgid "OAT"
-msgstr ""
+msgstr "TAE"
 
 #: src/InfoBoxes/Content/Factory.cpp:456
 msgid ""
 "Outside air temperature measured by a probe if supported by a connected "
 "intelligent variometer."
 msgstr ""
+"Temperatura do ar externo medida por uma sonda conectada a um vario digital "
+"suportado."
 
 #: src/InfoBoxes/Content/Factory.cpp:462
 msgid "Relative Humidity"
-msgstr ""
+msgstr "Umidade Relativa"
 
 #: src/InfoBoxes/Content/Factory.cpp:463
 msgid "RelHum"
@@ -969,14 +979,16 @@ msgid ""
 "Relative humidity of the air in percent as measured by a probe if supported "
 "by a connected intelligent variometer."
 msgstr ""
+"Umidade relativa do ar em percentagem, medida por uma sonda conectada a um "
+"vario digital suportado."
 
 #: src/InfoBoxes/Content/Factory.cpp:470
 msgid "Forecast Temperature"
-msgstr ""
+msgstr "Temperatura Prevista"
 
 #: src/InfoBoxes/Content/Factory.cpp:471
 msgid "MaxTemp"
-msgstr ""
+msgstr "TempMax"
 
 #: src/InfoBoxes/Content/Factory.cpp:472
 msgid ""
@@ -985,6 +997,11 @@ msgid ""
 "and relative humidity probe. (Touchscreen/PC only) Pressing the up/down "
 "cursor keys adjusts this forecast temperature."
 msgstr ""
+"Temperatura prevista no solo do aeródromo de casa, usada para estimar a "
+"altura de convecção e a altura da base em conjunto com o sensor de "
+"temperatura do ar externo e umidade relativa do ar. (Somente Touschscreen e "
+"PC) Pressionando as teclas para cima/para baixo ajusta a temperatura "
+"prevista."
 
 #: src/InfoBoxes/Content/Factory.cpp:478
 msgid "AA Distance Tgt"
